[package]
name = "risk_board_game_server"
version = "1.0.0"
edition = "2021"
default-run = "risk_board_game_server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"
lazy_static = "1.4.0"
rand = "0.8"
regex = "1.5.5"
chrono = "0.4"
itertools = "0.10"
tokio = "1.39.3"
console-subscriber = "0.1.8"
bincode = "1.3.3"
rayon = "1.6"


[[bin]]
name = "risk_board_game_server"
path = "src/main.rs"
